style: 로그인 페이지 디자인을 위한 css 수정

--- a/static/css/globals.css
+++ b/static/css/globals.css
@@ -16,3 +16,8 @@ button:focus-visible {
 a {
     text-decoration: none;
 }
+
+.main-wrapper {
+    height: 100%;
+    padding-top: var(--navbar-height);
+}
