--- a/static/css/nav/style.css
+++ b/static/css/nav/style.css
@@ -1,12 +1,15 @@
 .header {
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    width: 100%;
+    height: var(--navbar-height);
     display: flex;
-    width: 1440px;
     align-items: center;
     justify-content: space-between;
     padding: 24px 40px;
-    position: relative;
-    background-color: #ffffff;
-    border-radius: 40px;
+    background-color: #fff;
+    border-radius: 0 0 40px 40px;
 }
 
 .header .logo {
