--- a/static/css/globals.css
+++ b/static/css/globals.css
@@ -18,6 +18,10 @@ a {
 }
 
 .main-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
     height: 100%;
     padding-top: var(--navbar-height);
 }
