--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -25,7 +25,7 @@
                                name="username"
                                type="text"
                                required
-                               placeholder="Username or email address">
+                               placeholder="Username">
                     </div>
                     <div class="form-group">
                         <label for="id_password">비밀번호를 입력하세요</label>
