--- a/static/css/post/post_list.css
+++ b/static/css/post/post_list.css
@@ -209,3 +209,15 @@
 .current-page {
     color: black;
 }
+
+.add-post-btn {
+    padding: 8px 16px;
+    background-color: #f87537;
+    color: #fff;
+    border-radius: 4px;
+    text-decoration: none;
+    font-weight: 500;
+}
+.add-post-btn:hover {
+    background-color: #e0662e;
+}
